--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,19 +1,15 @@
 buildscript {
-    if (project == rootProject) {
-        repositories {
-            // google()
-            mavenCentral()
-        }
+    repositories {
+        google()
+        mavenCentral()
+    }
 
-        dependencies {
-            classpath 'com.android.tools.build:gradle:3.5.3'
-        }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:7.2.1'
     }
 }
 
 apply plugin: 'com.android.library'
-
-def DEFAULT_CORE_APP_UPDATE_VERSION = "2.0.1"
 
 def safeExtGet(prop, fallback) {
     rootProject.ext.has(prop) ? rootProject.ext.get(prop) : fallback
@@ -45,20 +41,19 @@ android {
 
 repositories {
     mavenLocal()
+    google()
+    mavenCentral()
+    maven { url 'https://maven.fpregistry.io/releases' }
+    maven { url 'https://jitpack.io' }
     maven {
         // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
         url("$rootDir/../node_modules/react-native/android")
     }
-    // google()
-    mavenCentral()
-    maven { url 'https://maven.fpregistry.io/releases' }
-    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
-    // implementation("com.google.android.play:app-update:${safeExtGet('playCoreAppUpdateVersion', DEFAULT_CORE_APP_UPDATE_VERSION)}")
     implementation "com.fingerprint.android:pro:2.2.3"
     implementation "com.github.fingerprintjs:fingerprint-android:2.0.0"
 }
