--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,8 +43,12 @@ repositories {
     mavenLocal()
     google()
     mavenCentral()
-    maven { url 'https://maven.fpregistry.io/releases' }
-    maven { url 'https://jitpack.io' }
+    maven {
+        url 'https://maven.fpregistry.io/releases'
+    }
+    maven {
+        url 'https://jitpack.io'
+    }
     maven {
         // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
         url("$rootDir/../node_modules/react-native/android")
